* 高レベルの使用法
* ストレージVMの使用状況
* ボリューム使用量


 https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-manage-capacity-licenses.html["容量ベースのライセンスを管理する"^] 。



=== マーケットプレイスサブスクリプションなしでBlueXPにアクセスすると通知が表示されるようになりました

マーケットプレイス サブスクリプションなしでBlueXPのCloud Volumes ONTAP にアクセスするたびに通知が表示されるようになりました。通知には、「この作業環境のマーケットプレイス サブスクリプションは、 Cloud Volumes ONTAP の利用規約に準拠している必要があります」と記載されています。



== 2023年4月4日



=== AWS の中国リージョンのサポート

Cloud Volumes ONTAP 9.12.1 GA 以降、AWS では次のように中国リージョンがサポートされるようになりました。

* 単一ノード システムがサポートされています。
* NetAppから直接購入したライセンスがサポートされます。


地域ごとの提供状況については、 https://bluexp.netapp.com/cloud-volumes-global-regions["Cloud Volumes ONTAPのグローバル リージョン マップ"^] 。



== 2023年4月3日

コネクタの 3.9.28 リリースでは、次の変更が導入されました。



=== トリノ地域が Google Cloud でサポートされるようになりました

トリノ リージョンは、Google Cloud のCloud Volumes ONTAPおよび Connector for Cloud Volumes ONTAP 9.12.1 GA 以降でサポートされるようになりました。



=== BlueXP digital walletの強化

BlueXP digital walletには、マーケットプレイスのプライベート オファーで購入したライセンス容量が表示されるようになりました。

https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-manage-capacity-licenses.html["アカウントで消費された容量を確認する方法を学びます"^] 。



=== ボリューム作成時のコメントのサポート

このリリースでは、API を使用してCloud Volumes ONTAP FlexGroupボリュームまたはFlexVol volumeを作成するときにコメントを追加できるようになりました。



=== Cloud Volumes ONTAPの概要、ボリューム、アグリゲート ページのBlueXPユーザー インターフェースの再設計

BlueXPでは、 Cloud Volumes ONTAP の概要、ボリューム、およびアグリゲート ページのユーザー インターフェイスが再設計されました。タイルベースのデザインにより、各タイルにさらに包括的な情報が表示されるため、ユーザー エクスペリエンスが向上します。

image:screenshot-resource-page-rn.png["このスクリーンショットは、Cloud Volumes ONTAP概要ページで再設計されたBlueXPユーザー インターフェースを示しています。さまざまなタイルに、ストレージ効率、バージョン、容量配分、 Cloud Volumes ONTAP の展開、ボリューム、アグリゲート、レプリケーション、バックアップに関する情報が表示されます。"]



=== Cloud Volumes ONTAPを通じて表示可能なFlexGroupボリューム

ONTAP System Manager またはONTAP CLI を通じて直接作成されたFlexGroupボリュームは、 BlueXPの再設計されたボリューム タイルを通じて表示できるようになりました。  FlexVolボリュームに提供される情報と同様に、 BlueXP は専用のボリューム タイルを通じて、作成されたFlexGroupボリュームの詳細情報を提供します。


NOTE: 現在、 BlueXPで既存のFlexGroupボリュームのみを表示できます。  BlueXPでFlexGroupボリュームを作成する機能は現在利用できませんが、将来のリリースで提供される予定です。
