@@ -4,7 +4,7 @@ permalink: task-updating-ontap-cloud.html
 keywords: update, updating, upgrading, upgrade, software, downgrade, downgrading, FTP, HTTP, mediator, local image, revert, reverting, downgrading, cloud backup 
 summary: NetApp ConsoleからCloud Volumes ONTAP をアップグレードして、最新の新機能と拡張機能にアクセスします。ソフトウェアをアップグレードする前に、 Cloud Volumes ONTAPシステムを準備する必要があります。 
 ---
-= Cloud Volumes ONTAPソフトウェアのアップグレード
+= Cloud Volumes ONTAP のアップグレード
 :hardbreaks:
 :allow-uri-read: 
 :nofooter: 
